--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-/*
-    Theme Name: Bikin
-    Theme URL: https://bootstrapmade.com/bikin-free-simple-landing-page-template/
-    Author: BootstrapMade
-    Author URL: https://bootstrapmade.com
-*/
-
 /* ==== Google font ==== */
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700,100);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600);
@@ -21,7 +14,6 @@ body {
   background: #fff;
   font-family:'Roboto', Arial, sans-serif;
   color:#333;
-  line-height:1.6em;
   overflow-x:hidden;
 }
 
@@ -49,8 +41,7 @@ h3{
   font-size: 16px;
   color: #787878;
   font-weight: 400;
-  line-height: 29px;
-}
+  }
 
 h4{
   font-size: 16px;
@@ -149,22 +140,6 @@ ul {
   margin-top: 12px;
  }
 
- @media (max-width: 767px) {
-   .navbar-brand {
-     padding-left: 15px;
-   }
-
-   .navbar-header {
-     margin-top: -12px;
-   }
-
-   .navbar {
-     padding-bottom: 12px;
-   }
-
- }
-
-
 
 .navbar-nav>li{
   margin-left: 20px;
@@ -224,24 +199,6 @@ color:white!important;
     text-decoration: none!important;
     color:white!important;
     }
-
-    
-    @media only screen and (max-width: 320px) {
-      .fadeInUp p {
-        font-size: 12px!important;
-        margin-top: 7px!important;
-      }
-
-      .fqv h2 span {
-        font-size: 20px!important;
-      }
-
-      .carousel-inner .btn-primary {
-        margin-top: 0px !important;        
-      }
-    
-    }
-
 
 
 
@@ -327,22 +284,24 @@ color:white!important;
 }
 
 .carousel-caption  h2 span {
-	font-size:30px;
+	font-size:90px;
 	color: #fff;
 }
 
-@media (min-width: 1024px) {
-  .carousel-caption  h2 span {
-	font-size: 60px;
-	}
-}
+/*// a partir de tablet  hacia mas grande //*/
+@media (min-width: 767px) { 
+  .carousel-caption  h2 span{
+background-color: red;
+  }
 
-@media (min-width: 1400px) {
-  .carousel-caption  h2 span {
-	font-size: 96px;
-	}
 }
+/*// a partir de tablet  hacia mas chico //*/
+@media (max-width: 767px) { 
+  .carousel-caption  h2 span{
+background-color: red;
+  }
 
+}
 
 .carousel-caption  p {
   font-size:30px;
@@ -377,72 +336,6 @@ color:white!important;
   transition:  color 300ms, background-color 300ms;
 }
 
-@media (max-width: 767px) {
-  .carousel-caption  h2, .carousel-caption  h2 span {
-    font-size: 36px;
-  }
-
-  .carousel-caption  p {
-    font-size: 24px;
-    margin-top: 24px;
-  }
-
-  .carousel-inner .form-inline .form-group button[type="livedemo"], .carousel-inner .form-inline .form-group button[type="getnow"]{
-  	padding:10px 30px;
-  	font-size:18px;
-  }
-
-  .carousel-inner .form-inline {
-    margin-bottom: 0;
-  }
-
-  .carousel-inner .form-group {
-    display: inline;
-  }
-
-  #carousel-slider .carousel-indicators {
-    bottom: 0;
-  }
-}
-
-
-
-@media (max-width: 575px) {
-  .carousel-caption {
-    top: -40px;
-  }
-  .carousel-caption  h2, .carousel-caption  h2 span {
-    font-size: 24px;
-  }
-
-  .carousel-caption  p {
-    font-size: 18px;
-    margin-top: 18px;
-  }
-
-  .carousel-inner .form-inline .form-group button[type="livedemo"], .carousel-inner .form-inline .form-group button[type="getnow"]{
-  	padding:5px 20px;
-  	font-size:14px;
-  }
-
-  .carousel-inner .form-inline {
-    margin-bottom: 0;
-    margin-top: 0;
-  }
-
-  .carousel-inner .form-group {
-    display: inline;
-    padding-top: 0;
-  }
-
-  #carousel-slider .carousel-indicators {
-    display: none !important;
-  }
-
-  .carousel-inner .btn-primary {
-    margin-top: 10px;
-  }
-}
 
 /**************Whatsapp**********************/
 .btn-whatsapp {
